project setting -1. build HikariCP,mybatis 2.properties

--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,13 @@ dependencies {
 	//테스트에서 lombok 사용
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
+	implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
+	implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.1.1'
+	// mybatis
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.3.0'
+	implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.0.1'
+
+
 }
 
 tasks.named('test') {
