--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,5 +6,5 @@ spring.thymeleaf.check-template-location=true
 spring.thymeleaf.suffix=.html
 spring.web.resources.static-locations=classpath:/static/
 # mybatis config
-mybatis.mapper-locations= classpath:mapper/**/*.xml
-mybatis.configuration.map-underscore-to-camel-case= true
+mybatis.mapper-locations=classpath:mapper/**/*.xml
+mybatis.configuration.map-underscore-to-camel-case=true
