--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     // mybatis
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.3.0'
     implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.0.1'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
 
 
 }
