세션 타임아웃, 카카오 로그인 검증 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,3 +47,7 @@ spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kak
 spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
 spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
 spring.security.oauth2.client.provider.kakao.user-name-attribute=id
+#google
+spring.security.oauth2.client.registration.google.client-id=242939801101-svnsms546a27mk3i9mhfisb7fd0ge7l9.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=email
