카카오, 구글 회원가입 및 로그인 구현.(두 개 다 동작 같음)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,5 +49,6 @@ spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.co
 spring.security.oauth2.client.provider.kakao.user-name-attribute=id
 #google
 spring.security.oauth2.client.registration.google.client-id=242939801101-svnsms546a27mk3i9mhfisb7fd0ge7l9.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
-spring.security.oauth2.client.registration.google.scope=email
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=email, profile
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8070/google-login
