--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/art_market_db?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=artmarket
 spring.datasource.password=1234
+server.max-http-header-size=40000
 # mybatis config
 mybatis.mapper-locations=classpath:mapper/**/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
