--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.thymeleaf.check-template-location=true
 spring.thymeleaf.suffix=.html
 spring.web.resources.static-locations=classpath:/static/
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/art_market_db?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://61.97.189.178:3306/art_market_db?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=artmarket
-spring.datasource.password=1234
+spring.datasource.password=a123456789!
 server.max-http-header-size=40000
 # mybatis config
 mybatis.mapper-locations=classpath:mapper/**/*.xml
@@ -22,7 +22,7 @@ spring.mail.password=kvbzjvfkobkgbvkb
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 #redis
-spring.redis.host=localhost
+spring.redis.host=61.97.189.178
 spring.redis.port=6379
 #web socket stomp
 spring.devtools.livereload.enabled=true
@@ -34,15 +34,15 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=20MB
 # total request size for a multipart/form-data cannot exceed 20MB.
 spring.servlet.multipart.max-request-size=20MB
-spring.servlet.multipart.location=C:\\upload\\
-file.upload.path=C:\\upload\\
-org.zerock.upload.path=C:\\upload\\
+spring.servlet.multipart.location=\\upload\\
+file.upload.path=\\upload\\
+org.zerock.upload.path=\\upload\\
 #Kakao
 spring.security.oauth2.client.registration.kakao.client-id=04e607024de70154a6a880a77c57ddad
 spring.security.oauth2.client.registration.kakao.scope=profile_nickname, account_email
 spring.security.oauth2.client.registration.kakao.client-name=Kakao
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8070/kakao-login
+spring.security.oauth2.client.registration.kakao.redirect-uri=http://61.97.189.178:8070/kakao-login
 spring.security.oauth2.client.registration.kakao.client-authentication-method=POST
 spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
 spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
@@ -52,4 +52,4 @@ spring.security.oauth2.client.provider.kakao.user-name-attribute=id
 spring.security.oauth2.client.registration.google.client-id=242939801101-svnsms546a27mk3i9mhfisb7fd0ge7l9.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=email, profile
-spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8070/google-login
+spring.security.oauth2.client.registration.google.redirect-uri=http://61.97.189.178:8070/google-login
