--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,9 +34,9 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=20MB
 # total request size for a multipart/form-data cannot exceed 20MB.
 spring.servlet.multipart.max-request-size=20MB
-spring.servlet.multipart.location=\\upload\\
-file.upload.path=\\upload\\
-org.zerock.upload.path=\\upload\\
+spring.servlet.multipart.location=upload
+file.upload.path=upload
+org.zerock.upload.path=upload
 #Kakao
 spring.security.oauth2.client.registration.kakao.client-id=04e607024de70154a6a880a77c57ddad
 spring.security.oauth2.client.registration.kakao.scope=profile_nickname, account_email
