--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,8 @@ spring.profiles.include=oauth
 #Java MailSender
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=fakey5669@gmail.com
-spring.mail.password=kvbzjvfkobkgbvkb
+spring.mail.username={username}
+spring.mail.password={password}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 #redis
