--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.thymeleaf.check-template-location=true
 spring.thymeleaf.suffix=.html
 spring.web.resources.static-locations=classpath:/static/
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://61.97.189.178:3306/art_market_db?serverTimezone=UTC&characterEncoding=UTF-8
-spring.datasource.username=artmarket
-spring.datasource.password=a123456789!
+spring.datasource.url=jdbc:mysql://{username}:3306/art_market_db?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username={username}
+spring.datasource.password={username}
 server.max-http-header-size=40000
 # mybatis config
 mybatis.mapper-locations=classpath:mapper/**/*.xml
@@ -38,7 +38,7 @@ spring.servlet.multipart.location=upload
 file.upload.path=upload
 org.zerock.upload.path=upload
 #Kakao
-spring.security.oauth2.client.registration.kakao.client-id=04e607024de70154a6a880a77c57ddad
+spring.security.oauth2.client.registration.kakao.client-id={username}
 spring.security.oauth2.client.registration.kakao.scope=profile_nickname, account_email
 spring.security.oauth2.client.registration.kakao.client-name=Kakao
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
@@ -49,7 +49,7 @@ spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/o
 spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
 spring.security.oauth2.client.provider.kakao.user-name-attribute=id
 #google
-spring.security.oauth2.client.registration.google.client-id=242939801101-svnsms546a27mk3i9mhfisb7fd0ge7l9.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id={username}
+spring.security.oauth2.client.registration.google.client-secret={username}
 spring.security.oauth2.client.registration.google.scope=email, profile
 spring.security.oauth2.client.registration.google.redirect-uri=http://61.97.189.178:8070/google-login
