--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,8 @@ spring.profiles.include=oauth
 #Java MailSender
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=fakey5669@gmail.com
-spring.mail.password=kvbzjvfkobkgbvkb
+spring.mail.username={username}
+spring.mail.password={password}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 #redis
@@ -38,7 +38,7 @@ spring.servlet.multipart.location=C:\\upload\\
 file.upload.path=C:\\upload\\
 org.zerock.upload.path=C:\\upload\\
 #Kakao
-spring.security.oauth2.client.registration.kakao.client-id=04e607024de70154a6a880a77c57ddad
+spring.security.oauth2.client.registration.kakao.client-id={username}
 spring.security.oauth2.client.registration.kakao.scope=profile_nickname, account_email
 spring.security.oauth2.client.registration.kakao.client-name=Kakao
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
@@ -49,7 +49,7 @@ spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/o
 spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
 spring.security.oauth2.client.provider.kakao.user-name-attribute=id
 #google
-spring.security.oauth2.client.registration.google.client-id=242939801101-svnsms546a27mk3i9mhfisb7fd0ge7l9.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id={username}
+spring.security.oauth2.client.registration.google.client-secret=GOCSPX{username}
 spring.security.oauth2.client.registration.google.scope=email, profile
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8070/google-login
